--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -208,82 +208,6 @@
         ></div>
       </section>
 
-         <!-- 🔥 store-inventory 🔥 -->
-      <section  
-        id="store-inventory-section"
-        data-icons="fa-store::fa-warehouse"
-        data-sectiontexts="Store::Inventory Area"
-        data-color="yellow-orange-rose"
-        class="section"
-      >
-        <div
-          id="section-header"
-          data-title="Store"
-          data-subtitle="Inventory Area"
-          data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
-          data-mainbtntext="Add New Product 🛒"
-          data-subbtntext="Logs 📜"
-        ></div>
-        <div
-          id="section-stats"
-        ></div>
-        <div
-          id="section-content"
-          data-sectioncount="2"
-          data-tabtitles="Adding Product and Monitor Stocks::Recent Daily Check-Ins"
-          data-subtitles="Daily users monitoring::Today's user daily check-ins"
-          data-sectiononesearchtext="Search keyword..."
-          data-sectiononesettings="1"
-          data-listemptytexts="No registered users yet::No check-ins today"
-          data-listtitletexts="[Product ID//Product Name//Product Type//Quantity//Price//Status//Date Registered]::[Product ID//Product Name//Product Type//Quantity//Price//Status//Check-in Time]"
-          data-listitembtnids="[userDetailsBtn]::[renewBtn//userVoidBtn]"
-          data-listitembtntexts="[Details ⚙]::[Details ⚙//Void 📕]"
-          data-listitembtncolors="[orange]::[orange//red]"
-          data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
-          data-sectiontwosettings="1"
-          data-sectiontwoemptylist='<p>Status - No connection</p><p class="text-sm">No uploaded QR yet</p>'
-          data-sectiontwosearchtext="Enter user ID..."
-          data-sectiontwobtntext="Submit Check-In"
-        ></div>
-      </section>
-
-         <!-- 🔥 store-selling 🔥 -->
-      <section 
-  id="store-selling-section"
-  data-customcontent="1"
-  data-icons="fa-store::fa-cart-shopping"
-  data-color="orange-red-violet"
-  class="section"
->
-  <!-- Section Header -->
-  <div
-    id="section-header"
-    data-title="What's New?"
-    data-subtitle="Announcements"
-    data-middletext="There's no news yet. Create one! 👉"
-    data-mainbtntext="Announce 📢"
-    data-subbtntext="Check 👁‍🗨"
-  ></div>
-
-  <!-- Section Stats -->
-  <div
-    id="section-stats"
-    data-toggles="1::1::1::0::0"
-    data-startingtexts="Avg::Avg::Avg::Active::Active"
-    data-highlighttexts="Daily::Weekly::Monthly::Monthly Passes::Reservations"
-    data-endingtexts="Earning::Earning::Earning::::"
-    data-types="average daily earning::average weekly earning::average monthly earning::active monthly passes::active reservations"
-  ></div>
-
-  <!-- Section Content -->
-  <div
-    id="section-content"
-    data-sectionindex="1"
-    data-tabindex="1"
-   
-  ></div>
-      </section>
-
       <!-- 🔥 maintenance 🔥 -->
       <section id="maintenance-section" data-icons="fa-dumbbell" data-color="cyan-blue-sky" class="section">
         <div
@@ -478,8 +402,7 @@
     <script type="module" src="/src/js/admin_stats.js"></script>
     <script type="module" src="/src/js/admin_content.js"></script>
     <script type="module" src="/src/js/admin_modules.js"></script>
-    <script type="module" src="/src/js/admin_modules/store_inventory.js"></script>
-     <script type="module" src="/src/js/admin_modules/store_selling.js"></script>
+    <!-- wag na mag add dito, automatic na to -->
 
     <!-- imported js -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
