--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -183,61 +183,46 @@
         ></div>
       </section>
 
-      <!-- 🔥 store-inventory 🔥 -->
+      <!-- 🔥 ecommerce-cart 🔥 -->
       <section
-        id="store-inventory-section"
-        data-icons="fa-store::fa-warehouse"
-        data-sectiontexts="Store::Inventory"
-        data-color="yellow-orange-rose"
-        class="section"
-      >
-        <div
-          id="section-header"
-          data-title="Store"
-          data-subtitle="Selling Area"
-          data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
-          data-mainbtntext="Add New Product 🛒"
-          data-subbtntext="Logs 📜"
-        ></div>
-        <div
-          id="section-stats"
-          data-toggles="0::0::0::0"
-          data-startingtexts="::Avg::Avg::Avg"
-          data-highlighttexts="Total::Morning::Afternoon::Evening"
-          data-endingtexts="Sales::Sales::Sales::Sales"
-        ></div>
-        <div
-          id="section-content"
-          data-sectioncount="2"
-          data-tabtitles="Registered Daily Users::Recent Daily Check-Ins"
-          data-subtitles="Daily users monitoring::Today's user daily check-ins"
-          data-sectiononesearchtext="Search keyword..."
-          data-sectiononesettings="1"
-          data-listemptytexts="No registered users yet::No check-ins today"
-          data-listtitletexts="[Product ID//Product Name//Product Type//Quantity//Price//Status//Date Registered]::[Product ID//Product Name//Product Type//Quantity//Price//Status//Check-in Time]"
-          data-listitembtnids="[userDetailsBtn]::[renewBtn//userVoidBtn]"
-          data-listitembtntexts="[Details ⚙]::[Details ⚙//Void 📕]"
-          data-listitembtncolors="[orange]::[orange//red]"
-          data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
-          data-sectiontwosettings="1"
-          data-sectiontwoemptylist='<p>Status - No connection</p><p class="text-sm">No uploaded QR yet</p>'
-          data-sectiontwosearchtext="Enter user ID..."
-          data-sectiontwobtntext="Submit Check-In"
-        ></div>
-      </section>
-
-      <!-- 🔥 store-pos 🔥 -->
-      <section
-        id="store-pos-section"
+        id="ecommerce-cart-section"
         data-icons="fa-store::fa-cart-shopping"
-        data-sectiontexts="Store::Point of Sale"
+        data-sectiontexts="E-Commerce::Cart"
         data-color="yellow-orange-rose"
         class="section"
       >
         <div
           id="section-header"
-          data-title="Store"
-          data-subtitle="Point of Sale"
+          data-title="Cart"
+          data-subtitle="Sales Draft Management"
+          data-middletext='<p class="skew-x-12 text-white">📆 Live date ⌚ Live time</p>'
+          data-mainbtntext="Checkout 🛒"
+        ></div>
+        <div
+          id="section-stats"
+        ></div>
+        <div
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="All Available Items"
+          data-subtitles="No filter"
+          data-sectiononesearchtext="Search keyword..."
+          data-sectiononesettings="1"
+        ></div>
+      </section>
+
+      <!-- 🔥 ecommerce-stock 🔥 -->
+      <section
+        id="ecommerce-stock-section"
+        data-icons="fa-store::fa-warehouse"
+        data-sectiontexts="E-Commerce::Stock"
+        data-color="yellow-orange-rose"
+        class="section"
+      >
+        <div
+          id="section-header"
+          data-title="Stock"
+          data-subtitle="Product Catalog"
           data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
           data-mainbtntext="Add New Product 🛒"
           data-subbtntext="Logs 📜"
@@ -251,29 +236,24 @@
         ></div>
         <div
           id="section-content"
-          data-sectioncount="2"
-          data-tabtitles="Registered Daily Users::Recent Daily Check-Ins"
-          data-subtitles="Daily users monitoring::Today's user daily check-ins"
+          data-sectioncount="1"
+          data-tabtitles="All Stocks"
+          data-subtitles="No filter"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
-          data-listemptytexts="No registered users yet::No check-ins today"
-          data-listtitletexts="[Product ID//Product Name//Product Type//Quantity//Price//Status//Date Registered]::[Product ID//Product Name//Product Type//Quantity//Price//Status//Check-in Time]"
-          data-listitembtnids="[userDetailsBtn]::[renewBtn//userVoidBtn]"
-          data-listitembtntexts="[Details ⚙]::[Details ⚙//Void 📕]"
-          data-listitembtncolors="[orange]::[orange//red]"
-          data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
-          data-sectiontwosettings="1"
-          data-sectiontwoemptylist='<p>Status - No connection</p><p class="text-sm">No uploaded QR yet</p>'
-          data-sectiontwosearchtext="Enter user ID..."
-          data-sectiontwobtntext="Submit Check-In"
+          data-listemptytexts="No items yet"
+          data-listtitletexts="[Product ID//Product Name//Product Type//Quantity//Price//Status//Date Registered]"
+          data-listitembtnids="[itemDetailsBtn]"
+          data-listitembtntexts="[Details ⚙]"
+          data-listitembtncolors="[orange]"
         ></div>
       </section>
 
-      <!-- 🔥 billing 🔥 -->
-      <section id="billing-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
+      <!-- 🔥 invoicing 🔥 -->
+      <section id="invoicing-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
         <div
           id="section-header"
-          data-title="Billing"
+          data-title="Invoicing"
           data-subtitle="Transaction Processing"
           data-mainbtntext="Manual Transaction 💳"
           data-subbtntext="Logs 📜"
@@ -295,7 +275,7 @@
           data-sectiononesettings="1"
           data-listemptytexts="No complete transactions today::No complete transactions yet"
           data-listtitletexts="[Transaction ID//User ID//Date & Time]::[Transaction ID//User ID//Date & Time]"
-          data-listitembtnids="[billingDetailsBtn//billingVoidBtn]::[billingDetailsBtn//billingVoidBtn]"
+          data-listitembtnids="[invoicingDetailsBtn//invoicingVoidBtn]::[invoicingDetailsBtn//invoicingVoidBtn]"
           data-listitembtntexts="[Details 📒//Void 📕]::[Details 📒//Void 📕]"
           data-listitembtncolors="[yellow//red]::[yellow//red]"
           data-sectiontwotitletexts="Pending Payment Queue::Recent pending transactions"
@@ -338,7 +318,7 @@
         data-color="violet-fuchsia-red"
         class="section"
       >
-        <div id="section-header" data-title="Access Control" data-subtitle="System Access Management" data-mainbtntext="Create 🔧"></div>
+        <div id="section-header" data-title="Access Control" data-subtitle="System Access Management" data-mainbtntext="Manage 🔧"></div>
         <div id="section-stats"></div>
         <div
           id="section-content"
