--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -130,7 +130,7 @@
           data-subtitles="Monthly pass growth tracker::Users due for monthly pass renewals"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
-          data-listemptytexts="::<p>No upcoming monthly pass renewals yet</p><p class='text-sm'>Range: Two weeks notice</p>"
+          data-listemptytexts="::<p class='text-sm 2xl:text-base'>No upcoming monthly pass renewals yet</p><p class='text-xs 2xl:text-sm'>Range: Two weeks notice</p>"
           data-listtitletexts="[]::[User ID//User//Expires After]"
           data-listitembtnids="[]::[renewBtn]"
           data-listitembtntexts="[]::[Renew 🎫]"
@@ -196,18 +196,21 @@
           data-title="Cart"
           data-subtitle="Sales Draft Management"
           data-middletext='<p class="skew-x-12 text-white">📆 Live date ⌚ Live time</p>'
-          data-mainbtntext="Checkout 🛒"
         ></div>
         <div
           id="section-stats"
         ></div>
         <div
           id="section-content"
-          data-sectioncount="1"
-          data-tabtitles="All Available Items"
-          data-subtitles="No filter"
+          data-sectioncount="2"
+          data-tabtitles="All Available Items::Best Selling Items::Least Selling Items"
+          data-subtitles="No filter::Fast moving items::Slow moving items"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
+          data-sectiontwotitletexts="Cart::Items added to cart"
+          data-sectiontwosettings="1"
+          data-sectiontwoemptylist="No items yet"
+          data-sectiontwobtntext="Checkout"
         ></div>
       </section>
 
@@ -223,7 +226,7 @@
           id="section-header"
           data-title="Stock"
           data-subtitle="Product Catalog"
-          data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
+          data-middletext='<p class="skew-x-12 text-white">📆 Live date ⌚ Live time</p>'
           data-mainbtntext="Add New Product 🛒"
           data-subbtntext="Logs 📜"
         ></div>
