--- a/src/html/admin_stats.html
+++ b/src/html/admin_stats.html
@@ -6,7 +6,7 @@
     class="section-stats-base border-${mainColor}-500 hidden min-h-[86px] p-3 xl:min-h-[108px] xl:p-4"
   >
     <div title="See breakdown" class="section-stats-f">🧾</div>
-    <p class="section-stats-h xl:mb-2 xl:text-lg"></p>
+    <p class="section-stats-h mb-2 xl:mb-3 text-sm xl:text-base"></p>
     <p class="bottom-0 mt-4 hidden text-xs lg:absolute lg:mb-5 xl:text-sm">(Click to show)</p>
     <p class="section-stats-c text-2xl xl:text-3xl">0</p>
   </div>
