--- a/src/html/custom/ecommerce_cart_content.html
+++ b/src/html/custom/ecommerce_cart_content.html
@@ -31,7 +31,7 @@
         class="absolute bottom-3 right-3 rounded-lg border border-white/20 bg-black/80 px-3 py-2 shadow-lg backdrop-blur-md"
       >
         <span class="bg-gradient-to-r from-yellow-300 to-amber-300 bg-clip-text text-xl font-bold text-transparent">
-          ₱${productPrice}
+          ${productPrice}
         </span>
       </div>
     </div>
@@ -39,7 +39,7 @@
     <div class="space-y-4 p-4">
       <div class="space-y-1">
         <h2 class="truncate text-lg font-bold leading-tight text-gray-900">${productName}</h2>
-        <p class="text-sm font-medium capitalize text-gray-600">${productCategory}</p>
+        <p class="truncate text-sm font-medium capitalize text-gray-600">${productCategory}</p>
       </div>
 
       <div
