--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -1,8 +1,8 @@
 <!-- do not modify -jest -->
-<div id="${sectionName}SectionContent" class="grid grid-cols-1 gap-2 xl:gap-8 2xl:grid-cols-12 2xl:gap-4">
+<div id="${sectionName}SectionContent" class="grid grid-cols-1 gap-1 xl:gap-2 2xl:grid-cols-12">
   <div class="flex flex-col col-span-1 2xl:col-span-8">
     <div class="section-content border-${mainColor}-500">
-      <div class="section-content-h h-[96px]">
+      <div class="section-content-h h-[80px]">
         <div class="section-content-h2">
           <button id="${sectionName}_tab" class="section-content-tab hidden bg-gray-200 hover:bg-gray-300 min-w-[150px]">
             <p class="mb-5 2xl:mb-6 text-sm 2xl:text-base"></p>
