--- a/src/html/admin_header.html
+++ b/src/html/admin_header.html
@@ -10,7 +10,9 @@
     </div>
   </div>
   <div class="section-h-c bg-${mainColor}-500">
-    <div class="text-${mainColor}-300 w-[235px] text-center text-sm font-bold xl:text-base 2xl:w-[302px] 2xl:text-lg">
+    <div
+      class="text-${mainColor}-300 w-[235px] text-center text-xs font-bold xl:text-sm 2xl:w-[302px] 2xl:text-base"
+    >
       ${middletext}
     </div>
   </div>
