--- a/src/html/admin_stats.html
+++ b/src/html/admin_stats.html
@@ -1,5 +1,5 @@
 <!-- do not modify -jest -->
-<div class="grid grid-cols-1 gap-1 lg:gap-2">
+<div class="grid grid-cols-1 gap-1">
   <div
     id="${sectionName}SectionStats"
     data-section="${sectionName}"
