--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -1,18 +1,21 @@
 <!-- do not modify -jest -->
-<div id="${sectionName}SectionContent" class="grid grid-cols-1 gap-1 xl:gap-2 2xl:grid-cols-12">
-  <div class="flex flex-col col-span-1 2xl:col-span-8">
+<div id="${sectionName}SectionContent" class="grid grid-cols-1 gap-1 2xl:grid-cols-12">
+  <div class="col-span-1 flex flex-col 2xl:col-span-8">
     <div class="section-content border-${mainColor}-500">
       <div class="section-content-h h-[80px]">
         <div class="section-content-h2">
-          <button id="${sectionName}_tab" class="section-content-tab hidden bg-gray-200 hover:bg-gray-300 min-w-[150px]">
-            <p class="mb-5 2xl:mb-6 text-sm 2xl:text-base"></p>
-            <div class="absolute inset-0 mt-5 2xl:mt-6 content-center">
+          <button
+            id="${sectionName}_tab"
+            class="section-content-tab hidden min-w-[150px] bg-gray-200 hover:bg-gray-300"
+          >
+            <p class="mb-5 text-sm 2xl:mb-6 2xl:text-base"></p>
+            <div class="absolute inset-0 mt-5 content-center 2xl:mt-6">
               <p class="text-xs text-gray-500"></p>
               <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
             </div>
             <div class="absolute right-2 top-2 hidden">
               <div class="relative h-2 w-2">
-                <div class="h-full w-full absolute scale-105 animate-ping rounded-full bg-red-500 opacity-75"></div>
+                <div class="absolute h-full w-full scale-105 animate-ping rounded-full bg-red-500 opacity-75"></div>
                 <div class="absolute h-2 w-2 rounded-full bg-red-500"></div>
               </div>
             </div>
@@ -24,7 +27,7 @@
               autocomplete="off"
               id="${sectionName}SectionOneSearch"
               placeholder="${sectionOneSearchText}"
-              class="section-content-search-main focus:ring-${mainColor}-500 w-48 xl:w-56 2xl:w-64"
+              class="section-content-search-main focus:ring-${mainColor}-500 w-48 text-sm"
             />
             <div class="section-content-searchicon">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -42,21 +45,21 @@
           </button>
         </div>
       </div>
-      <div class="scrollbar-light min-h-[425px] max-h-[425px] p-2 2xl:p-6"></div>
+      <div class="scrollbar-light max-h-[425px] min-h-[425px] p-2"></div>
     </div>
   </div>
-  <div class="flex flex-col col-span-1 hidden 2xl:col-span-4">
-    <div class="section-content-base border-${mainColor}-500 p-6">
-      <div class="mb-6 flex items-center justify-between gap-3">
-        <div>
-          <p class="text-lg font-bold"></p>
-          <p class="text-sm text-gray-500"></p>
+  <div class="col-span-1 flex hidden flex-col 2xl:col-span-4">
+    <div class="section-content-base border-${mainColor}-500 p-4">
+      <div class="mb-5 flex items-center justify-between gap-2 font-bold">
+        <div class="flex flex-col gap-1">
+          <p class="text-base font-bold"></p>
+          <p class="text-xs text-gray-500"></p>
         </div>
         <button class="section-content-settings hover:shadow-${mainColor}-500 group hidden">
           <div id="${sectionName}SectionTwoSettings" class="pb-[4px] pl-[1px] group-hover:animate-spin">⚙</div>
         </button>
       </div>
-      <div class="flex flex-col items-center gap-6"></div>
+      <div class="flex flex-col items-center gap-4"></div>
     </div>
   </div>
 </div>
