--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -408,7 +408,7 @@
           data-sectiontwosearchtext="Search logs..."
           data-sectiononesettings="1"
           data-listemptytexts="No equipment maintenance records::No logs available"
-          data-listtitletexts="[Equipment Name//Last Maintenance//Status]::[Timestamp//Type//Message]"
+          data-listtitletexts="[Equipment ID//Equipment Name//Quantity//Machine Type//Status//Register Date]::[Equipment ID//Quantity//Machine Type//Status//Timestamp]"
           data-listitembtnids="[maintenanceDetailsBtn]::[viewLogDetails]"
           data-listitembtntexts="[Details 🛠️]::[Details 🔍]"
           data-listitembtncolors="[orange]::[blue]"
