--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -34,9 +34,7 @@
     <div id="admin_main"></div>
 
     <!-- 🔥 dynamic sidebar 🔥 -->
-    <aside
-      class="flexbox fixed left-0 top-0 z-50 h-screen w-48 border-r border-gray-700 bg-gray-800 shadow-2xl"
-    >
+    <aside class="flexbox fixed left-0 top-0 z-50 h-screen w-48 border-r border-gray-700 bg-gray-800 shadow-2xl">
       <!-- header -->
       <header class="flex-shrink-0 border-b border-gray-700 p-6">
         <!-- 🔑 CLIENT -->
@@ -130,7 +128,7 @@
           data-subtitles="Monthly pass growth tracker::Users due for monthly pass renewals"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
-          data-listemptytexts="::<p class='text-sm 2xl:text-base'>No upcoming monthly pass renewals yet</p><p class='text-xs 2xl:text-sm'>Range: Two weeks notice</p>"
+          data-listemptytexts="::<p class='text-sm'>No upcoming monthly pass renewals yet</p><p>Range: Two weeks notice</p>"
           data-listtitletexts="[]::[User ID//User//Expires After]"
           data-listitembtnids="[]::[renewBtn]"
           data-listitembtntexts="[]::[Renew 🎫]"
@@ -177,7 +175,7 @@
           data-listitembtncolors="[orange]::[gray//red]"
           data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
           data-sectiontwosettings="1"
-          data-sectiontwoemptylist='<p class="text-sm">Status - No connection</p><p class="text-xs">No uploaded QR yet</p>'
+          data-sectiontwoemptylist='<p class="text-sm">Status - No connection</p><p>No uploaded QR yet</p>'
           data-sectiontwosearchtext="Enter user ID..."
           data-sectiontwobtntext="Submit Check-In"
         ></div>
