--- a/src/html/custom/ecommerce_cart_content.html
+++ b/src/html/custom/ecommerce_cart_content.html
@@ -2,7 +2,7 @@
 <div data-sectionindex="1" data-tabindex="1" class="h-[375px]">
   <div
     id="ecommerceCartTab1Empty"
-    class="h-full content-center text-center text-sm font-bold text-gray-400 2xl:text-base"
+    class="h-full content-center text-center text-xs font-bold text-gray-400"
   >
     No available products yet
   </div>
@@ -78,7 +78,7 @@
 <div data-sectionindex="1" data-tabindex="2" class="h-[375px]">
   <div
     id="ecommerceCartTab2Empty"
-    class="h-full content-center text-center text-sm font-bold text-gray-400 2xl:text-base"
+    class="h-full content-center text-center text-xs font-bold text-gray-400"
   >
     No best selling products yet
   </div>
@@ -87,7 +87,7 @@
 <div data-sectionindex="1" data-tabindex="3" class="h-[375px]">
   <div
     id="ecommerceCartTab3Empty"
-    class="h-full content-center text-center text-sm font-bold text-gray-400 2xl:text-base"
+    class="h-full content-center text-center text-xs font-bold text-gray-400"
   >
     No least selling products yet
   </div>
