--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -8,7 +8,7 @@
             id="${sectionName}_tab"
             class="section-content-tab hidden min-w-[150px] bg-gray-200 hover:bg-gray-300"
           >
-            <p class="mb-5 text-sm 2xl:mb-6 2xl:text-base"></p>
+            <p class="mb-5 text-sm 2xl:mb-6"></p>
             <div class="absolute inset-0 mt-5 content-center 2xl:mt-6">
               <p class="text-xs text-gray-500"></p>
               <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
