--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -50,7 +50,7 @@
       <nav id="sidebar-body" class="scrollbar-dark max-h-[calc(100vh-160px)] flex-1 pt-4"></nav>
 
       <!-- footer -->
-      <footer class="flex-shrink-0 border-t border-gray-700 bg-gray-800 p-2 2xl:h-[80px] 2xl:p-4">
+      <footer class="flex-shrink-0 border-t border-gray-700 bg-gray-800 p-2">
         <button
           id="logout"
           class="flex w-full items-center rounded-lg px-4 py-3 text-gray-300 duration-300 hover:bg-gray-700 hover:text-white"
