--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -41,7 +41,9 @@
             </div>
           </div>
           <button class="section-content-settings hover:shadow-${mainColor}-500 group hidden">
-            <div id="${sectionName}SectionOneSettings" class="pb-[4px] pl-[1px] group-hover:animate-spin">⚙</div>
+            <div id="${sectionName}SectionOneSettings" class="emoji group-hover:animate-spin">
+              <img src="/src/images/⚙️.png" class="inline h-9 w-9 p-1" />
+            </div>
           </button>
         </div>
       </div>
@@ -56,7 +58,9 @@
           <p class="text-xs text-gray-500"></p>
         </div>
         <button class="section-content-settings hover:shadow-${mainColor}-500 group hidden">
-          <div id="${sectionName}SectionTwoSettings" class="pb-[4px] pl-[1px] group-hover:animate-spin">⚙</div>
+          <div id="${sectionName}SectionTwoSettings" class="emoji group-hover:animate-spin">
+            <img src="/src/images/⚙️.png" class="inline h-9 w-9 p-1" />
+          </div>
         </button>
       </div>
       <div class="flex flex-col items-center gap-4"></div>
