--- a/src/html/admin_modal.html
+++ b/src/html/admin_modal.html
@@ -102,12 +102,12 @@
           <button
             type="button"
             id="modalSubBtn"
-            class="hidden w-full rounded-lg bg-gray-500 p-4 font-bold text-white shadow-lg duration-300 hover:scale-105 hover:bg-gray-400 hover:shadow-xl hover:shadow-gray-500 active:scale-95 active:bg-gray-600 active:shadow-none"
+            class="emoji hidden w-full rounded-lg bg-gray-500 p-4 font-bold text-white shadow-lg duration-300 hover:scale-105 hover:bg-gray-400 hover:shadow-xl hover:shadow-gray-500 active:scale-95 active:bg-gray-600 active:shadow-none"
           ></button>
           <button
             id="modalMainBtn"
             type="button"
-            class="w-full rounded-lg bg-amber-600 p-4 font-bold text-white shadow-lg duration-300 hover:scale-105 hover:bg-amber-500 hover:shadow-xl hover:shadow-amber-600 active:scale-95 active:bg-amber-700 active:shadow-none"
+            class="emoji w-full rounded-lg bg-amber-600 p-4 font-bold text-white shadow-lg duration-300 hover:scale-105 hover:bg-amber-500 hover:shadow-xl hover:shadow-amber-600 active:scale-95 active:bg-amber-700 active:shadow-none"
           ></button>
         </div>
       </form>
